<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinterface.MainActivity">

    <ListView
        android:id="@+id/books_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- Image from https://it.pinterest.com/pin/299630181445558838/ -->
        <ImageView
            android:id="@+id/empty_list_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/book_stack"
            android:src="@drawable/book_stack" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_list_image"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/medium_spacing"
            android:text="@string/empty_view_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/empty_subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_title_text"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/small_spacing"
            android:text="@string/empty_view_subtitle_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/listSecondaryText" />

    </RelativeLayout>
</RelativeLayout>